changed regression I to tidymodels

--- a/06-classification_continued.Rmd
+++ b/06-classification_continued.Rmd
@@ -1,4 +1,4 @@
-```{r 06-setup, include=FALSE}
+NN`{r 06-setup, include=FALSE}
 knitr::opts_chunk$set(message = FALSE)
 ```
 
@@ -122,7 +122,7 @@ a train / test split of 75% / 25%, as desired.
 
 **2. Pre-process the data**
 
-As we mentioned last chapter, k-nn is sensitive to the scale of the predictors,
+As we mentioned last chapter, K-NN is sensitive to the scale of the predictors,
 and so we should perform some preprocessing to standardize them. An
 additional consideration we need to take when doing this is that we should
 create the standardization preprocessor using **only the training data**. This ensures that
