--- a/08-regression2.Rmd
+++ b/08-regression2.Rmd
@@ -1,7 +1,7 @@
 # Regression II: linear regression {#regression2}
 
 ## Overview 
-Introduction to linear regression models. We will also begin to compare k-nn to linear models in the context of regression.
+Introduction to linear regression models. We will also begin to compare K-NN to linear models in the context of regression.
 
 ## Chapter learning objectives 
 By the end of the chapter, students will be able to:
@@ -11,7 +11,7 @@ By the end of the chapter, students will be able to:
 * In R, overlay the ordinary least squares regression lines from `geom_smooth` on a single plot. 
 
 ## Simple linear regression
-k-nn is not the only type of regression, there are many, and one common and quite useful type of regression is called simple linear regression. Simple linear regression is similar to k-nn regression in that the target/response variable is expected to be quantitative, however, one way it varies quite differently is how the training data is used to predict a value for a new observation. Instead of looking at the $k$-nearest neighbours and averaging over their values for a prediction, in simple linear regression all the training data points are used to create a straight line of "best fit", and then the line is used to "look-up" the predicted value. *Note - for simple linear regression there is only one response variable and only one predictor. Later in this chapter we introduce the more general linear regression case where more than one predictor can be used.* 
+K-NN is not the only type of regression, there are many, and one common and quite useful type of regression is called simple linear regression. Simple linear regression is similar to K-NN regression in that the target/response variable is expected to be quantitative, however, one way it varies quite differently is how the training data is used to predict a value for a new observation. Instead of looking at the $k$-nearest neighbours and averaging over their values for a prediction, in simple linear regression all the training data points are used to create a straight line of "best fit", and then the line is used to "look-up" the predicted value. *Note - for simple linear regression there is only one response variable and only one predictor. Later in this chapter we introduce the more general linear regression case where more than one predictor can be used.* 
 
 For example, let's revisit the smaller version of the Sacramento housing data set and the prediction case where we come across a new house we are interested in purchasing, and it is 2000 square feet! Its advertised list price is $350,000 should we give them what they are asking? Or is that overpriced and we should offer less? 
 
@@ -71,11 +71,11 @@ small_plot +
 
 ```
 
-How do we assess the predictive accuracy of a simple linear regression model? We use the same measure of predictive performance we used with k-nn regression, $RMPSE$.
+How do we assess the predictive accuracy of a simple linear regression model? We use the same measure of predictive performance we used with K-NN regression, $RMPSE$.
 
 ## Linear regression in R using `caret`
 
-We can perform simple linear regression in R using the `caret` package in a very similar manner to how we performed k-nn regression, using the `train` function. To do this, instead of setting `method = "knn"` we instead set `method = "lm"`. Another difference is that we do not need to choose $k$ in the context of linear regression and so we do not need to perform cross validation. Below we illustrate how we can use the `caret` package to predict house sale price given house size using a simple linear regression approach using the full Sacramento real estate data set:
+We can perform simple linear regression in R using the `caret` package in a very similar manner to how we performed K-NN regression, using the `train` function. To do this, instead of setting `method = "knn"` we instead set `method = "lm"`. Another difference is that we do not need to choose $k$ in the context of linear regression and so we do not need to perform cross validation. Below we illustrate how we can use the `caret` package to predict house sale price given house size using a simple linear regression approach using the full Sacramento real estate data set:
 
 As usual, we should start by putting some test data away in a lock box that we can come back to after we choose our final model, so let's take care of that business now. 
 
@@ -142,9 +142,9 @@ lm_plot_final <- ggplot(train_data, aes(x = sqft, y = price)) +
 lm_plot_final
 ```
 
-## Comparing simple linear and k-nn regression
+## Comparing simple linear and K-NN regression
 
-Now that we have a general understanding of both simple linear and k-nn regression, we can start to compare and contrast these methods as well as the predictions made by them. To start, let's look at the visualization of the simple linear regression model predictions for the Sacramento real estate data (predicting price from house size) and the "best" k-nn regression model obtained from the same problem:
+Now that we have a general understanding of both simple linear and K-NN regression, we can start to compare and contrast these methods as well as the predictions made by them. To start, let's look at the visualization of the simple linear regression model predictions for the Sacramento real estate data (predicting price from house size) and the "best" K-NN regression model obtained from the same problem:
 
 ```{r 08-compareRegression, echo = FALSE, fig.height = 4, fig.width = 10}
 k = data.frame(k = 41)
@@ -161,7 +161,7 @@ plot_final <- ggplot(train_data, aes(x = sqft, y = price)) +
     ylab("Price (USD)") +
     scale_y_continuous(labels = dollar_format())  +
     geom_line(data = predictions_all, aes(x = sqft, y = price), color = "blue") +
-    ggtitle("k-nn regression") +
+    ggtitle("K-NN regression") +
     annotate("text", x = 3500, y = 100000, label = paste("RMSPE =", "87120.62"))
 
 lm_plot_final <- lm_plot_final +
@@ -171,7 +171,7 @@ lm_plot_final <- lm_plot_final +
 grid.arrange(lm_plot_final, plot_final, ncol = 2)
 ```
 
-What differences do we observe from the visualization above? One obvious difference is the shape of the blue lines. In simple linear regression we are restricted to a straight line, whereas in k-nn regression our line is much more flexible and can be quite wiggly. There can be an advantage to limiting the model to a straight line, as simple linear regression does, in that a straight line model is quite interpretable and can be defined by two numbers, the y-intercept and the slope. The slope is particularly meaningful for interpretation, as it tells us what unit increase in the target/response variable we predict given a unit increase in the predictor/explanatory variable. Additionally, because our model is restricted to a straight line, we can even use the mathematical equation for a straight line as a basis to write a mathematical expression of our model. 
+What differences do we observe from the visualization above? One obvious difference is the shape of the blue lines. In simple linear regression we are restricted to a straight line, whereas in K-NN regression our line is much more flexible and can be quite wiggly. There can be an advantage to limiting the model to a straight line, as simple linear regression does, in that a straight line model is quite interpretable and can be defined by two numbers, the y-intercept and the slope. The slope is particularly meaningful for interpretation, as it tells us what unit increase in the target/response variable we predict given a unit increase in the predictor/explanatory variable. Additionally, because our model is restricted to a straight line, we can even use the mathematical equation for a straight line as a basis to write a mathematical expression of our model. 
 
 Remembering that the equation for a straight line is: 
 
@@ -195,18 +195,18 @@ Which we can then plug into the equation:
 
 $$house\: price = `r format(lm_model$finalModel$coefficients[[1]], scientific = FALSE)` + `r round(lm_model$finalModel$coefficients[[2]])`*house\: size$$
 
-k-nn regression, as simple as it is to implement and understand, has no such interpretability from it's wiggly line.
+K-NN regression, as simple as it is to implement and understand, has no such interpretability from it's wiggly line.
 
-There can however also be a disadvantage to using a simple linear regression model in some cases, particularly when the relationship between the target and the predictor is not linear, but instead some other shape, such as curved or circular. In these cases the prediction model from a simple linear regression will underfit (have high bias), meaning that model/predicted values does not match the actual observed values very well. Such a model would probably have a quite high $RMSE$ when assessing model goodness of fit on the training data and a quite high $RMPSE$ when assessing model prediction quality on a test data set. On such a data set, k-nn regression may fare better. Additionally, there are other types of regression you can learn about in future courses that may do even better at predicting with such data.
+There can however also be a disadvantage to using a simple linear regression model in some cases, particularly when the relationship between the target and the predictor is not linear, but instead some other shape, such as curved or circular. In these cases the prediction model from a simple linear regression will underfit (have high bias), meaning that model/predicted values does not match the actual observed values very well. Such a model would probably have a quite high $RMSE$ when assessing model goodness of fit on the training data and a quite high $RMPSE$ when assessing model prediction quality on a test data set. On such a data set, K-NN regression may fare better. Additionally, there are other types of regression you can learn about in future courses that may do even better at predicting with such data.
 
-How do these two models compare on this data set? On the visualizations above we also printed the $RMPSE$ as calculated from predicting on the test data set that was not used to train/fit the models. The $RMPSE$ for the simple linear regression model is less than the $RMPSE$ for the k-nn regression model, and thus if were were comparing these in practice we would choose to use the simple linear regression model to make our predictions because of this (in addition to the fact the the simple linear regression model is more interpretable). 
+How do these two models compare on this data set? On the visualizations above we also printed the $RMPSE$ as calculated from predicting on the test data set that was not used to train/fit the models. The $RMPSE$ for the simple linear regression model is less than the $RMPSE$ for the K-NN regression model, and thus if were were comparing these in practice we would choose to use the simple linear regression model to make our predictions because of this (in addition to the fact the the simple linear regression model is more interpretable). 
 
 
 ## Multivariate linear regression
 
-As in k-nn classification and k-nn regression, we can move beyond the simple case of one response variable and only one predictor and perform multivariate linear regression where we can have multiple predictors. In this case we fit a plane to the data, as opposed to a straight line.
+As in K-NN classification and K-NN regression, we can move beyond the simple case of one response variable and only one predictor and perform multivariate linear regression where we can have multiple predictors. In this case we fit a plane to the data, as opposed to a straight line.
 
-To do this, we follow a very similar approach to what we did using `caret` for k-nn regression, however, we do not need to use cross-validation to choose $k$. We also do not need to scale the data for linear regression as it does not use a distance between points calculation in its algorithm. We demonstrate how to do this below using the Sacramento real estate data with both house size (measured in square feet) as well as number of bathrooms as our predictors, and continue to use house sale price as our outcome/target variable that we are trying to predict.
+To do this, we follow a very similar approach to what we did using `caret` for K-NN regression, however, we do not need to use cross-validation to choose $k$. We also do not need to scale the data for linear regression as it does not use a distance between points calculation in its algorithm. We demonstrate how to do this below using the Sacramento real estate data with both house size (measured in square feet) as well as number of bathrooms as our predictors, and continue to use house sale price as our outcome/target variable that we are trying to predict.
 
 We will start by splitting our data into a trained and test set as we did before:
 
@@ -294,7 +294,7 @@ plot_ly() %>%
               z = ~ lm_z_grid,
               colorbar=list(title='Price (USD)'))
 ```
-We see that the predictions from linear regression with two predictors form a plane as well, but this plane differs from the one we get from k-nn regression in its flexibility. The plane from k-nn regression above was more flexible and more closely followed the shape of the training data. The plane from linear regression however is constrained to being linear (i.e., a flat plane). As discussed this can be advantageous in one aspect, which is that for each predictor, we can get a slope from linear regression, and thus describe the plane mathematically. We can extract those slope values from our model object as shown below:
+We see that the predictions from linear regression with two predictors form a plane as well, but this plane differs from the one we get from K-NN regression in its flexibility. The plane from K-NN regression above was more flexible and more closely followed the shape of the training data. The plane from linear regression however is constrained to being linear (i.e., a flat plane). As discussed this can be advantageous in one aspect, which is that for each predictor, we can get a slope from linear regression, and thus describe the plane mathematically. We can extract those slope values from our model object as shown below:
 
 ```{r 09-get-slopes}
 lm_mult_reg_final$finalModel$coefficients
@@ -320,7 +320,7 @@ And finally, fill in the values for $\beta_0$, $\beta_1$ and $\beta_2$ from the 
 
 $$house\: price = `r format(lm_mult_reg_final$finalModel$coefficients[[1]], scientific = FALSE)` + `r format(round(lm_mult_reg_final$finalModel$coefficients[[2]]), scientific = FALSE)`*house\: size + `r format(round(lm_mult_reg_final$finalModel$coefficients[[3]]), scientific = FALSE)` *  \:number\: of \: bathrooms$$
 
-OK great, so this model is more interpretable than the multivariate k-nn regression model (i.e., we can write a mathematical equation that explains how each predictor is affecting the predictions), but as always, we should look at the test error and ask whether linear regression is doing a better job of predicting compared to k-nn regression in this multivariate regression case? To do that we can use this linear regression model to predict on the test data to get our test error.
+OK great, so this model is more interpretable than the multivariate K-NN regression model (i.e., we can write a mathematical equation that explains how each predictor is affecting the predictions), but as always, we should look at the test error and ask whether linear regression is doing a better job of predicting compared to K-NN regression in this multivariate regression case? To do that we can use this linear regression model to predict on the test data to get our test error.
 
 ```{r 09-get-RMSPE}
 test_pred_lm <- predict(lm_mult_reg_final, lm_X_test)
@@ -329,9 +329,9 @@ lm_mult_test_results <- defaultSummary(lm_modelvalues)
 lm_mult_test_results[[1]]
 ```
 
-We get that the $RMSPE$ for the multivariate linear regression model of `r format(lm_mult_test_results[[1]], scientific = FALSE)`. This prediction error is less than the prediction error for the multivariate k-nn regression model, indicating that we should likely choose linear regression for predictions of house price on this data set. But wait, we should also ask if this more complex model is doing a better job of predicting compared to our simple linear regression model with only a single predictor (house size). Revisiting last section, we see that our $RMSPE$ for our simple linear regression model with only a single predictor was `r format(lm_test_results[[1]], scientific = FALSE)` which is less than that for our more complex model, meaning that it performed better at predicting on the test data set.
+We get that the $RMSPE$ for the multivariate linear regression model of `r format(lm_mult_test_results[[1]], scientific = FALSE)`. This prediction error is less than the prediction error for the multivariate K-NN regression model, indicating that we should likely choose linear regression for predictions of house price on this data set. But wait, we should also ask if this more complex model is doing a better job of predicting compared to our simple linear regression model with only a single predictor (house size). Revisiting last section, we see that our $RMSPE$ for our simple linear regression model with only a single predictor was `r format(lm_test_results[[1]], scientific = FALSE)` which is less than that for our more complex model, meaning that it performed better at predicting on the test data set.
 
-Should we always end up choosing a simple linear regression as our model? No! And you never know what model will be the best until you go through this process. Exploratory data analysis can give you some hints, but until you look at the prediction errors to compare the models you don't really know. Additionally, here we compare test errors purely for the purposes of teaching. In practice, if you wanted to choose compare several regression models with differing numbers of variables to see which performed the best you would use cross-validation to choose this (similar to how we use cross validation to choose k in k-nn regression). There are several well known and more advanced methods to do this that are beyond the scope of this course, and they include backward or forward selection, and L1 or L2 regularization (also known as Lasso and Ridge regression, respectively).
+Should we always end up choosing a simple linear regression as our model? No! And you never know what model will be the best until you go through this process. Exploratory data analysis can give you some hints, but until you look at the prediction errors to compare the models you don't really know. Additionally, here we compare test errors purely for the purposes of teaching. In practice, if you wanted to choose compare several regression models with differing numbers of variables to see which performed the best you would use cross-validation to choose this (similar to how we use cross validation to choose k in K-NN regression). There are several well known and more advanced methods to do this that are beyond the scope of this course, and they include backward or forward selection, and L1 or L2 regularization (also known as Lasso and Ridge regression, respectively).
 
 ## The other side of regression
 
