--- a/07-regression1.Rmd
+++ b/07-regression1.Rmd
@@ -544,7 +544,7 @@ zvals <- knn_mult_fit %>%
                 predict(crossing(xvals, yvals) %>% mutate(sqft = xvals, beds = yvals)) %>%
                 pull(.pred)
 
-zvalsm <- matrix(zvals, nrow=length(sqft))
+zvalsm <- matrix(zvals, nrow=length(xvals))
 
 plot_ly() %>% 
   add_markers(data = sacramento_train,
