--- a/08-regression2.Rmd
+++ b/08-regression2.Rmd
@@ -24,8 +24,8 @@ variable is quantitative. However, one way it varies quite
 differently is how the training data is used to predict a value for a new
 observation. Instead of looking at the $K$-nearest neighbours and averaging
 over their values for a prediction, in simple linear regression all the
-training data points are used to create a straight line of "best fit", and then
-the line is used to "look-up" the predicted value. 
+training data points are used to create a straight line of best fit, and then
+the line is used to "look up" the predicted value. 
 
 > Note: for simple linear
 regression there is only one response variable and only one predictor. Later in
@@ -38,11 +38,12 @@ in purchasing with an advertised list price of
 \$350,000. Should we offer the list price, or is that over/undervalued?
 
 To answer this question using simple linear regression, we use the data we have
-to draw the straight line of "best fit" through our existing data points:
+to draw the straight line of best fit through our existing data points:
 
 ```{r 08-lin-reg1, message = FALSE, warning = FALSE, echo = FALSE, fig.height = 4, fig.width = 5}
 library(tidyverse)
 library(gridExtra)
+library(caret)
 
 data(Sacramento)
 set.seed(1234)
@@ -57,8 +58,18 @@ small_plot <- ggplot(small_sacramento, aes(x = sqft, y = price)) +
 small_plot
 ```
 
-Then we can use this line to "look up" the predicted price given the value we
-have for the predictor/explanatory variable (here 2,000 square feet). 
+The equation for the straight line is: 
+
+$$\text{house price} = \beta_0 + \beta_1 \cdot (\text{house size}),$$
+where
+
+- $\beta_0$ is the vertical intercept of the line (the value where the line cuts the vertical axis)
+- $\beta_1$ is the slope of the line
+
+Therefore using the data to find the line of best fit is equivalent to finding coefficients 
+$\beta_0$ and $\beta_1$ that *parametrize* (correspond to) the line of best fit.
+Once we have the coefficients, we can use the equation above to evaluate the predicted price given the value we
+have for the predictor/explanatory variable&mdash;here 2,000 square feet. 
 
 ```{r 08-lin-reg2, message = FALSE, warning = FALSE, echo = FALSE, fig.height = 4, fig.width = 5}
 small_model <- lm(price ~ sqft, data = small_sacramento)
@@ -75,7 +86,7 @@ print(prediction[[1]])
 By using simple linear regression on this small data set to predict the sale price
 for a 2,000 square foot house, we get a predicted value of 
 \$`r format(round(prediction[[1]]), scientific = FALSE)`. But wait a minute...how
-exactly does simple linear regression choose the line of "best fit"? Many
+exactly does simple linear regression choose the line of best fit? Many
 different lines could be drawn through the data points. We show some examples
 below:
 
@@ -87,11 +98,11 @@ small_plot +
   geom_abline(intercept = -64542.23, slope = 160, color = "red") 
 ```
 
-Simple linear regression chooses the straight line of "best fit" by choosing
+Simple linear regression chooses the straight line of best fit by choosing
 the line that minimzes the **average** vertical distance between itself and
 each of the observed data points. From the lines shown above, that is the blue
 line. What exactly do we mean by the vertical distance between the predicted
-values (which fall along the line of "best fit") and the observed data points?
+values (which fall along the line of best fit) and the observed data points?
 We illustrate these distances in the plot below with a red line:
 
 ```{r 08-verticalDistToMin,  echo = FALSE, message = FALSE, warning = FALSE, fig.height = 4, fig.width = 5}
@@ -103,24 +114,30 @@ small_plot +
 
 ```
 
-How do we assess the predictive accuracy of a simple linear regression model?
-We use the same measure of predictive performance we used with K-NN regression,
-$RMPSE$.
+To assess the predictive accuracy of a simple linear regression model,
+we use RMSPE&mdash;the same measure of predictive performance we used with K-NN regression.
 
 ## Linear regression in R
 
 We can perform simple linear regression in R using `tidymodels` in a
 very similar manner to how we performed K-NN regression. 
 To do this, instead of creating a `nearest_neighbor` model specification with
-the `kknn` engine, we instead use a `linear_reg` model specification
+the `kknn` engine, we use a `linear_reg` model specification
 with the `lm` engine. Another difference is that we do not need to choose $K$ in the
 context of linear regression, and so we do not need to perform cross validation.
 Below we illustrate how we can use the usual `tidymodels` workflow to predict house sale
 price given house size using a simple linear regression approach using the full
 Sacramento real estate data set.
 
+> An additional difference that you will notice below is that we do not standardize
+> (i.e., scale and center) our predictors. In K-nearest neighbours models, recall that 
+> the model fit changes depending on whether we standardize first or not. In linear regression,
+> standardization does not affect the fit (it *does* affect the coefficients in the equation, though!).
+> So you can standardize if you want&mdash;it won't hurt anything&mdash;but if you leave the
+> predictors in their original form, the best fit coefficients are usually easier to interpret afterward.
+
 As usual, we start by putting some test data away in a lock box that we
-can come back to after we choose our final model, so let's take care of that now.
+can come back to after we choose our final model. Let's take care of that now.
 
 ```{r 08-test-train-split}
 set.seed(1234)
@@ -136,9 +153,7 @@ lm_spec <- linear_reg() %>%
             set_engine("lm") %>%
             set_mode("regression")
 
-lm_recipe <- recipe(price ~ sqft, data = sacramento_train) %>%
-                  step_scale(all_predictors()) %>%
-                  step_center(all_predictors())
+lm_recipe <- recipe(price ~ sqft, data = sacramento_train) 
 
 lm_fit <- workflow() %>%
             add_recipe(lm_recipe) %>%
@@ -146,8 +161,14 @@ lm_fit <- workflow() %>%
             fit(data = sacramento_train)
 lm_fit
 ```
-
-And finally, we predict on the test data set to assess how well our model does:
+Our coefficients are 
+(intercept) $\beta_0=$ `r format(round(pull(tidy(pull_workflow_fit(lm_fit)), estimate)[1]), scientific=FALSE)`
+and (slope) $\beta_1=$ `r format(round(pull(tidy(pull_workflow_fit(lm_fit)), estimate)[2]), scientific=FALSE)`.
+This means that the equation of the line of best fit is
+$$\text{house price} = `r format(round(pull(tidy(pull_workflow_fit(lm_fit)), estimate)[1]), scientific=FALSE)` + `r format(round(pull(tidy(pull_workflow_fit(lm_fit)), estimate)[2]), scientific=FALSE)`\cdot (\text{house size}),$$
+and that the model predicts that houses 
+start at \$`r format(round(pull(tidy(pull_workflow_fit(lm_fit)), estimate)[1]), scientific=FALSE)` for 0 square feet, and that
+every extra square foot increases the cost of the house by \$`r format(round(pull(tidy(pull_workflow_fit(lm_fit)), estimate)[2]), scientific=FALSE)`. Finally, we predict on the test data set to assess how well our model does:
 
 ```{r 08-assessFinal}
 lm_test_results <- lm_fit %>%
@@ -165,11 +186,12 @@ sale price based off of the predictor of home size? Again answering this is
 tricky to answer and requires to use domain knowledge and think about the
 application you are using the prediction for. 
 
-And what does our final simple linear regression model look like when we
-predict across all possible house sizes we might encounter in the Sacremento
-area? There is a plotting function in the `tidyverse`, `geom_smooth`, that
+To visualize the simple linear regression model, we can plot the predicted house
+price across all possible house sizes we might encounter superimposed on a scatter
+plot of the original housing price data. There is a plotting function in 
+the `tidyverse`, `geom_smooth`, that
 allows us to do this easily by adding a layer on our plot with the simple
-linear regression predicted line of "best fit". The default for this adds a
+linear regression predicted line of best fit. The default for this adds a
 plausible range to this line that we are not interested in at this point, so to
 avoid plotting it, we provide the argument `se = FALSE` in our call to
 `geom_smooth`.
@@ -185,6 +207,16 @@ lm_plot_final <- ggplot(sacramento_train, aes(x = sqft, y = price)) +
 lm_plot_final
 ```
 
+We can extract the coefficients from our model by accessing the
+fit object that is output by the `fit` function; we first have to extract
+it from the workflow using the `pull_workflow_fit` function, and then apply
+the `tidy` function to convert the result into a data frame:
+
+```{r 08-lm-get-coeffs}
+coeffs <- tidy(pull_workflow_fit(lm_fit))
+coeffs
+```
+
 ## Comparing simple linear and K-NN regression
 
 Now that we have a general understanding of both simple linear and K-NN
@@ -196,7 +228,7 @@ obtained from the same problem:
 
 ```{r 08-compareRegression, echo = FALSE, warning = FALSE, message = FALSE, fig.height = 4, fig.width = 10}
 set.seed(1234)
-sacr_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = 14) %>%
+sacr_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = 30) %>%
             set_engine("kknn") %>%
             set_mode("regression")
 
@@ -204,8 +236,10 @@ sacr_wkflw <- workflow() %>%
            add_recipe(sacr_recipe) %>%
            add_model(sacr_spec)
 
-sacr_preds <- sacr_wkflw %>%
-   fit(data = sacramento_train) %>%
+sacr_fit <- sacr_wkflw %>%
+   fit(data = sacramento_train)
+
+sacr_preds <- sacr_fit %>%
    predict(sacramento_train) %>%
    bind_cols(sacramento_train)
 
@@ -215,6 +249,14 @@ sacr_rmse <- sacr_preds %>%
               pull(.estimate) %>%
               round(2)
 
+sacr_rmspe <- sacr_fit %>%
+                predict(sacramento_test) %>%
+                bind_cols(sacramento_test) %>%
+                metrics(truth = price, estimate = .pred) %>%
+                filter(.metric == 'rmse') %>% 
+		pull(.estimate) %>% round()
+
+
 knn_plot_final <- ggplot(sacr_preds, aes(x = sqft, y = price)) +
             geom_point(alpha = 0.4) +
             xlab("House size (square footage)") +
@@ -222,78 +264,63 @@ knn_plot_final <- ggplot(sacr_preds, aes(x = sqft, y = price)) +
             scale_y_continuous(labels = dollar_format())  +
             geom_line(data = sacr_preds, aes(x = sqft, y = .pred), color = "blue") +
             ggtitle("K-NN regression") +
-            annotate("text", x = 3500, y = 100000, label = paste("RMSPE =", sacr_rmse))
+            annotate("text", x = 3500, y = 100000, label = paste("RMSPE =", sacr_rmspe))
 
-lm_rmse <- round(lm_test_results %>% filter(.metric == 'rmse') %>% pull(.estimate), 2)
+lm_rmspe <- lm_test_results %>% 
+		filter(.metric == 'rmse') %>% 
+		pull(.estimate) %>%
+                round()
 
 lm_plot_final <- lm_plot_final +
-  annotate("text", x = 3500, y = 100000, label = paste("RMSPE =", lm_rmse)) +
+  annotate("text", x = 3500, y = 100000, label = paste("RMSPE =", lm_rmspe)) +
   ggtitle("linear regression")
 
-grid.arrange(lm_plot_final, plot_final, ncol = 2)
+grid.arrange(lm_plot_final, knn_plot_final, ncol = 2)
 ```
 
 What differences do we observe from the visualization above? One obvious
 difference is the shape of the blue lines. In simple linear regression we are
 restricted to a straight line, whereas in K-NN regression our line is much more
-flexible and can be quite wiggly. There can be an advantage to limiting the
-model to a straight line, as simple linear regression does, in that a straight
-line model is quite interpretable and can be defined by two numbers, the
-y-intercept and the slope. The slope is particularly meaningful for
-interpretation, as it tells us what unit increase in the target/response
+flexible and can be quite wiggly. But there is a major interpretability advantage in limiting the
+model to a straight line. A 
+straight line can be defined by two numbers, the
+vertical intercept and the slope. The intercept tells us what the prediction is when
+all of the predictors are equal to 0; and the slope tells us what unit increase in the target/response
 variable we predict given a unit increase in the predictor/explanatory
-variable. Additionally, because our model is restricted to a straight line, we
-can even use the mathematical equation for a straight line as a basis to write
-a mathematical expression of our model. 
+variable. K-NN regression, as simple as it is to implement and understand, has no such
+interpretability from its wiggly line. 
 
-Remembering that the equation for a straight line is: 
-
-$$Y = \beta_0 + \beta_1X$$
-Where:
-
-- $\beta_0$ is the y-intercept of the line (the value where the line cuts the y-axis)
-- $\beta_1$ is the slope of the line
-
-We can then write:
-
-$$\text{house price} = \beta_0 + \beta_1\cdot\text{house size}$$
-
-and finally, fill in the values for $\beta_0$ and $\beta_1$ from the straight
-line. We can get these values from our model by accessing the
-fit object that is output by the `fit` function; we first have to extract
-it from the workflow using the `pull_workflow_fit` function, and then apply
-the `tidy` function to convert the result into a data frame:
-
-```{r 08-lm-get-coeffs}
-coeffs <- tidy(pull_workflow_fit(lm_fit))
-coeffs
-```
-
-Which we can then plug into the equation:
-
-$$\text{house price} = `r format(coeffs %>% filter(term == '(Intercept)') %>% pull(estimate), scientific = FALSE)` + `r format(coeffs %>% filter(term == 'sqft') %>% pull(estimate), scientific = FALSE)`\cdot \text{house size}$$
-
-K-NN regression, as simple as it is to implement and understand, has no such
-interpretability from its wiggly line. There can however 
-also be a disadvantage to using a simple linear regression
+There can however also be a disadvantage to using a simple linear regression
 model in some cases, particularly when the relationship between the target and
-the predictor is not linear, but instead some other shape (e.g. curved or
-circular). In these cases the prediction model from a simple linear regression
+the predictor is not linear, but instead some other shape (e.g. curved or oscillating). In 
+these cases the prediction model from a simple linear regression
 will underfit (have high bias), meaning that model/predicted values does not
 match the actual observed values very well. Such a model would probably have a
-quite high $RMSE$ when assessing model goodness of fit on the training data and
-a quite high $RMPSE$ when assessing model prediction quality on a test data
+quite high RMSE when assessing model goodness of fit on the training data and
+a quite high RMPSE when assessing model prediction quality on a test data
 set. On such a data set, K-NN regression may fare better. Additionally, there
 are other types of regression you can learn about in future courses that may do
 even better at predicting with such data.
 
-How do these two models compare on this data set? On the visualizations above
-we also printed the $RMPSE$ as calculated from predicting on the test data set
-that was not used to train/fit the models. The $RMPSE$ for the simple linear
-regression model is less than the $RMPSE$ for the K-NN regression model.
+How do these two models compare on the Sacramento house prices data set? On 
+the visualizations above we also printed the RMPSE as calculated from 
+predicting on the test data set that was not used to train/fit the models. The RMPSE for the simple linear
+regression model is slightly lower than the RMPSE for the K-NN regression model.
 Considering that the simple linear regression model is also more interpretable,
 if we were comparing these in practice we would likely choose to use the simple
 linear regression model.
+
+Finally, note that the K-NN regression model becomes "flat"
+at the left and right boundaries of the data, while the linear model
+predicts a constant slope. Predicting outside the range of the observed
+data is known as *extrapolation*; K-NN and linear models behave quite differently
+when extrapolating. Depending on the application, the flat
+or constant slope trend may make more sense. For example, if our housing
+data were slightly different, the linear model may have actually predicted 
+a *negative* price for a small houses (if the intercept $\beta_0$ was negative),
+which obviously does not match reality. On the other hand, the trend of increasing
+house size corresponding to increasing house price probably continues for large houses, 
+so the "flat" extrapolation of K-NN likely does not match reality. 
 
 ## Multivariate linear regression
 
@@ -303,21 +330,16 @@ linear regression where we can have multiple predictors. In this case we fit a
 plane to the data, as opposed to a straight line.
 
 To do this, we follow a very similar approach to what we did for
-K-NN regression; but recall that we do not need to use cross-validation to choose any parameters.
-We also do not need to scale the data for linear regression as it does not use
-a distance between points calculation in its algorithm. We demonstrate how to
-do this below using the Sacramento real estate data with both house size
+K-NN regression; but recall that we do not need to use cross-validation to choose any parameters,
+nor do we need to standardize (i.e., center and scale) the data for linear regression. 
+We demonstrate how to do this below using the Sacramento real estate data with both house size
 (measured in square feet) as well as number of bedrooms as our predictors, and
 continue to use house sale price as our outcome/target variable that we are
-trying to predict.
-
-We will start by changing the formula in the recipe to include both the `sqft` and `beds` variables
-as predictors:
+trying to predict. We will start by changing the formula in the recipe to 
+include both the `sqft` and `beds` variables as predictors:
 
 ```{r 08-lm-mult-test-train-split}
-lm_recipe <- recipe(price ~ sqft + beds, data = sacramento_train) %>%
-              step_scale(all_predictors()) %>%
-              step_center(all_predictors())
+lm_recipe <- recipe(price ~ sqft + beds, data = sacramento_train) 
 ```
 
 Now we can build our workflow and fit the model:
@@ -336,9 +358,10 @@ lm_mult_test_results <- lm_fit %>%
                 predict(sacramento_test) %>%
                 bind_cols(sacramento_test) %>%
                 metrics(truth = price, estimate = .pred)
+lm_mult_test_results
 ```
 
-What does our model predictions look like in the case of linear regression when we have two predictors? We illustrate this below:
+In the case of two predictors, our linear regression creates a *plane* of best fit, shown below:
 
 ```{r 08-3DlinReg, echo = FALSE, message = FALSE, warning = FALSE}
 library(plotly)
@@ -349,7 +372,7 @@ zvals <- lm_fit %>%
                 predict(crossing(xvals, yvals) %>% mutate(sqft = xvals, beds = yvals)) %>%
                 pull(.pred)
 
-zvalsm <- matrix(zvals, nrow=length(sqft))
+zvalsm <- matrix(zvals, nrow=length(xvals))
 
 plot_ly() %>% 
   add_markers(data = sacramento_train,
@@ -369,37 +392,31 @@ We see that the predictions from linear regression with two predictors form a
 flat plane. This is the hallmark of linear regression, and differs from the 
 wiggly, flexible surface we get from other methods such as K-NN regression. 
  As discussed this can be advantageous in one aspect, which is that for each
-predictor, we can get a slope from linear regression, and thus describe the
+predictor, we can get slopes/intercept from linear regression, and thus describe the
 plane mathematically. We can extract those slope values from our model object
 as shown below:
 ```{r 08-lm-multi-get-coeffs}
 coeffs <- tidy(pull_workflow_fit(lm_fit))
 coeffs
 ```
-And then use those slopes, to write a mathematical equation to describe the prediction plane.
-Remembering that the equation for a plane is: 
+And then use those slopes to write a mathematical equation to describe the prediction plane:
 
-$$Y = \beta_0 + \beta_1X_1 + \beta_2X_2$$
-Where:
+$$\text{house price} = \beta_0 + \beta_1\cdot(\text{house size}) + \beta_2\cdot(\text{number of bedrooms}),$$
+where:
 
-- $\beta_0$ is the y-intercept of the hyperplane (the value where it cuts the y-axis)
-- $\beta_1$ is the slope for the first predictor
-- $X_1$ is the first predictor
-- $\beta_2$ is the slope for the second predictor
-- $X_2$ is the second predictor
+- $\beta_0$ is the vertical intercept of the hyperplane (the value where it cuts the vertical axis)
+- $\beta_1$ is the slope for the first predictor (house size)
+- $\beta_2$ is the slope for the second predictor (number of bedrooms)
 
-We can then write:
-
-$$\text{house price} = \beta_0 + \beta_1 \cdot \text{house size} + \beta_2 \cdot\text{number of bedrooms}$$
-
-And finally, fill in the values for $\beta_0$, $\beta_1$ and $\beta_2$ from the model output above:
+Finally, we can fill in the values for $\beta_0$, $\beta_1$ and $\beta_2$ from the model output above
+to create the equation of the plane of best fit to the data: 
 ```{r 08-lm-multi-get-coeffs-hidden, echo = FALSE}
-icept <- format(coeffs %>% filter(term == '(Intercept)') %>% pull(estimate), scientific = FALSE)
-sqftc <- format(coeffs %>% filter(term == 'sqft') %>% pull(estimate), scientific = FALSE)
-bedsc <- format(coeffs %>% filter(term == 'beds') %>% pull(estimate), scientific = FALSE)
+icept <- format(round(coeffs %>% filter(term == '(Intercept)') %>% pull(estimate)), scientific = FALSE)
+sqftc <- format(round(coeffs %>% filter(term == 'sqft') %>% pull(estimate)), scientific = FALSE)
+bedsc <- format(round(coeffs %>% filter(term == 'beds') %>% pull(estimate)), scientific = FALSE)
 ```
 
-$$\text{house price} = (`r icept`) + (`r sqftc`)\cdot \text{house size} + (`r bedsc`) \cdot \text{number of bedrooms}$$
+$$\text{house price} = `r icept` + `r sqftc`\cdot (\text{house size})  `r bedsc` \cdot (\text{number of bedrooms})$$
 
 This model is more interpretable than the multivariate K-NN
 regression model; we can write a mathematical equation that explains how
