added to the intro

--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -1,9 +1,8 @@
-# Introduction to Sampling and Inference {#inference}
+# Introduction to Statistical Inference {#inference}
 
 ## Overview
 
-Recall from Chapter 1, one of the data analysis questions we often want to answer is inferential question. 
-
+Recall from Chapter 1, one of the data analysis questions we often want to answer is an inferential question. For example, 
 estimation 
 confidence intervals 
 hypothesis tests 
