--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -1,29 +1,41 @@
 # Introduction to Statistical Inference {#inference}
 
 ## Overview
+Recall from Chapter 1, one of the data analysis questions we often want to answer is an *inferential question* where we make conclusions about a population of interest based on observed data sampled from that population. For example, statistical inference can help us decide if differences we observe between the responses of two groups in a clinical trial give us evidence that these differences exist in the wider population.
 
-Recall from Chapter 1, one of the data analysis questions we often want to answer is an inferential question. For example, 
-estimation 
-confidence intervals 
-hypothesis tests 
+We will start with fundamental ideas of sampling, populations, samples, parameters and statistics and work our way to discussing sampling distributions, bootstrapping, estimation and confidence intervals. In this chapter we will introduce two forms of statistical inference: 
 
-This chapter provides an introduction to sampling and statistical inference. 
+* Point Estimation 
+* Interval Estimation
+
+Point estimation and interval estimate are two methods of drawing conclusions about the population using our sample, however there are other methods which we will not discuss in this chapter. The term "statistical inference" encompasses a wide range of methods and there are many complexities for performing inference, however, this chapter will provide you with a broad introduction to sampling and statistical inference. 
 
 ## Chapter learning objectives 
 By the end of the chapter, students will be able to:
 
-* Explain the sampling distribution of the sample mean.
-* Describe the properties of the sampling distribution of the sample mean
-* Discuss what a sampling distribution of sample means would look like given different populations, and sample sizes commenting on the shape, center and spread
-* Explain why we don't have a sampling distribution in practice/real life.
-* Define bootstrapping.
-* Recognize the role of sampling distributions in statistical inference.
-* Use R to created bootstrap distribution to approximate a sampling distribution.
-* Contrast bootstrap and sampling distributions.
+* Describe real world examples of questions that can be answered with the statistical inference methods.
+* Name common population parameters (e.g., mean, proportion, median, variance, standard deviation) that are often estimated using sample data, and use computation to estimate these.
+* Define the following statistical sampling terms (population, sample, population parameter, point estimate, sampling distribution).
+* Explain the difference between a population parameter and sample point estimate.
+* Use computation to draw random samples from a finite population.
+* Use computation to create a sampling distribution from a finite population.
+* Describe how sample size influences the sampling distribution.
 
-## Clustering
-Clustering is a data analysis task involving separating a data set into
-subgroups of related data. For example, we might use clustering to separate a
+## Why do we need sampling? 
+Statistical inference is a data analysis question where we want to look for patterns, trends, or relationships in a data set and decide how applicable these findings are to the wider population.	For example, we might use statistical inference to help us answer the questions:
+
+* What is the average price of all one bedroom apartments in Vancouver, Canada?
+or
+* What proportion of University of British Columbia undergraduate students have an iPhone?
+
+In these questions we are interested in making conclusions about all one bedroom apartments in Vancouver, Canada and all University of British Columbia undergraduate students respectively, which represent our populations of interest. A **population** is the complete collection of individuals, or cases we are interested in studying. A census would provide all of the characteristics about the population. However, in practice, a census is often time consuming, costly and sometimes impossible. Therefore we can take a **sample**, a subset of individuals, or cases collected from the population. A sample can provide useful information about the population if the sample is *unbiased*. A sample is said to be biased if the sample is systematically different from the population in some way. For example 
+A parameter is a numerical value of the population and a statistic is a numerical value of the sample. 
+These questions are examples of *point estimation*, where we estimate our population parameter using a single value (our sample statistic).
+A sample 
+A population
+A population parameter is 
+A sample statistics 
+ to separate a
 dataset of documents into groups that correspond to topics, a dataset of human
 genetic information into groups that correspond to ancestral subpopulations, or
 a dataset of online customers into groups that correspond to purchasing
